# BabelFish

./: .gitignore  BabelFish_API.py  CMakeLists.txt  LICENSE  dev_loopback.py  main.c
driver/: API Data.xlsx  BabelFish_API.py  BabelFish_Data.py  BabelFish_Driver_Test.py  BabelFish_Test_Script.py
modules/: CMakeLists.txt
modules/can/: CMakeLists.txt  canHandlers.c  canHandlers.h  endpoint.c  endpoint.h
modules/can/canIF/: canIf.c
modules/can/canSM/: canSM.c  canSM.h  canSM_internals.c
modules/can/driver/: MCP2515_can.c  canDefinitions.h  icDefinitions.h
modules/devicePins/: CMakeLists.txt  device_pins.c  device_pins.h
modules/gp/: CMakeLists.txt  commandHandlers.c  commandHandlers.h  endpoint.c  endpoint.h
modules/gp/analogHandlers/: analogHandlers.c  analogHandlers.h  analogHandlers_Types.h
modules/gp/digitalHandlers/: digitalHandlers.c  digitalHandlers.h
modules/gp/pwmHandlers/: pwmHandlers.c  pwmHandlers.h
modules/i2c/: CMakeLists.txt  endpoint.c  endpoint.h  i2cHandlers.c  i2cHandlers.h
modules/spi/: CMakeLists.txt  endpoint.c  endpoint.h  spiHandlers.c  spiHandlers.h
modules/uart/: CMakeLists.txt  endpoint.c  endpoint.h  uartHandlers.c  uartHandlers.h
modules/usb/: CMakeLists.txt  endpoint.c  endpoint.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_interface.c  usb_interface.h  usb_types.h
usb_interface/: CMakeLists.txt  usb_common.h  usb_device_pins.c  usb_device_pins.h  usb_lowlevel.c  usb_lowlevel.h
usb_interface/com/: commandHandlers.c  commandHandlers.h  endpoint.c  endpoint.h
usb_interface/com/canHandlers/: canHandlers.c
usb_interface/com/i2cHandlers/: i2cHandlers.c  i2cHandlers.h
usb_interface/com/spiHandlers/: spiHandlers.c  spiHandlers.h
usb_interface/com/uartHandlers/: uartHandlers.c  uartHandlers.h
usb_interface/gpio/: commandHandlers.c  endpoint.c  endpoint.h
usb_interface/gpio/analogHandlers/: analogHandlers.c  analogHandlers.h
usb_interface/gpio/digitalHandlers/: digitalHandlers.c
usb_interface/gpio/pwmHandlers/: pwmHandlers.c
usb_protocol/: CMakeLists.txt  messages.h  usb_protocol.c  usb_protocol.h
